--- a/index.html
+++ b/index.html
@@ -8,27 +8,34 @@
   
   <title>Frontend Mentor | Social links profile</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/fonts.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <div class="container">
+    <main>
+      <figure>
+        <img src="./assets/images/avatar-jessica.jpeg" alt="Avatar image">
+      </figure>
 
-  Jessica Randall
-  London, United Kingdom
-  "Front-end developer and avid reader."
+      <h1>Jessica Randall</h1>
+      <span class="subtitle">London, United Kingdom</span>
+      <span>"Front-end developer and avid reader."</span>
 
-  GitHub
-  Frontend Mentor
-  LinkedIn
-  Twitter
-  Instagram
+      <ul>
+        <li><a href="#">GitHub</a></li>
+        <li><a href="#">Frontend Mentor</a></li>
+        <li><a href="#">LinkedIn</a></li>
+        <li><a href="#">Twitter</a></li>
+        <li><a href="#">Instagram</a></li>
+      </ul>
+    </main>
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    <footer class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Aya</a>.
+    </footer>
   </div>
 </body>
 </html>
