--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
       <span>"Front-end developer and avid reader."</span>
 
       <ul>
-        <li><a href="#">GitHub</a></li>
-        <li><a href="#">Frontend Mentor</a></li>
-        <li><a href="#">LinkedIn</a></li>
-        <li><a href="#">Twitter</a></li>
-        <li><a href="#">Instagram</a></li>
+        <li><a href="https://github.com/ayamello" target="_blank">GitHub</a></li>
+        <li><a href="https://www.frontendmentor.io/profile/ayamello" target="_blank">Frontend Mentor</a></li>
+        <li><a href="https://www.linkedin.com/in/aya-mello/" target="_blank">LinkedIn</a></li>
+        <li><a href="#" target="_blank">Twitter</a></li>
+        <li><a href="#" target="_blank">Instagram</a></li>
       </ul>
     </main>
   
     <footer class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Aya</a>.
+      Coded by <a href="https://www.linkedin.com/in/aya-mello/">Aya</a>.
     </footer>
   </div>
 </body>
